<resources>
    <string name="app_name">Medidomes</string>
    <string name="etmedicamento">Medicamento</string>
    <string name="etUso">Uso</string>
    <string name="et_Fecha_Inicio">Fecha Inicio Tratamiento</string>
    <string name="et_Duracion">Días Duración del Tratamiento</string>
    <string name="et_posologia">Posología Diaria</string>
    <string name="et_aplicaciones">Numero de Lugares a Aplicar</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="cuadro_dialogo_mensaje">Mensaje</string>
    <string name="cuadro_dialogo_boton">Aceptar</string>
    <string name="Errores">Error</string>
    <string name="mensaje_error_campo_vacio">El siguiente campo no puede estar vacío:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
